--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru" data-cursor-style="true" data-chrome-id="bmjmipppabdlpjccanalncobmbacckjn" class="default_cursor_cs">
+<html >
 
 <head>
     <title>Ландшафтный дизайн в Москве и МО - мастерская Green Eden</title>
     <meta name="description" content="Все виды услуг по ландшафтному дизайну в Москве и Московской области - от ландшафтного дизайна под ключ до отдельных работ по проектированию, озеленению, благоустройству, уходу за растениями. Действует система скидок." />
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="canonical" href="https://www.green-eden.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
